# Lib-Manager-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  FeatureNote.txt  Makefile  README.md  book.hpp  lib plan.txt  library.cpp  library.hpp  main  main.cpp  student.hpp  transaction.hpp
.github/workflows/: test.yml
data/: books-data.txt.example  student-data.txt
include/: api.hpp  book.hpp  date.hpp  library.hpp  storage.hpp  student.hpp  transaction.hpp  tui.hpp
src/: CapCapNote.txt  api.cpp  book.cpp  date.cpp  library.cpp  main.cpp  storage.cpp  student.cpp  transaction.cpp  tui.cpp
tests/: CMakeLists.txt  test_book.cpp  test_date.cpp  test_library.cpp  test_student.cpp
